cambios en contacto

--- a/templetes/contacto.html
+++ b/templetes/contacto.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block contenido %}
-
+<h1>rama 1</h1>
     {% if info_enviado %}
             <h2>La informacion suministrada es</h2>
             {{ email }}
