--- a/templetes/base.html
+++ b/templetes/base.html
@@ -4,20 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
-    <link rel="stylesheet" href="tienda/static/css/style.css">
+    {% load static %}
+    <link rel="stylesheet" href="{% static '/tienda/static/css/bootstrap.min.css' %}" alt="">
 
 </head>
 <body>
-    <header>
-        <nav class="menu">
-            <ul>
-                <li> <a href="{% url 'vista_inicio' %}">  inicio </a></li>
-                <li> <a href="{% url 'vista_about' %}">  About </a></li>
-                <li> <a href="{% url 'vista_contacto' %}"> Contacto </a></li>
-            </ul>
-        </nav>
-    </header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <!--<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>-->
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="{% url 'vista_inicio' %}">inicio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'vista_about' %}">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'vista_contacto' %}">Contacto</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'vista_productos' %}">Productos</a>
+                  </li>
+                <!--<li class="nav-item">
+                  <a class="nav-link" href="{% url 'vista_agregar_productos' %}">Agregar productos</a>
+                </li>-->
+                
+              </ul>
+            </div>
+          </div>
+<!--
+ <ul>
+            <li> <a href="{% url 'vista_inicio' %}">  inicio </a></li>
+            <li> <a href="{% url 'vista_about' %}">  About </a></li>
+            <li> <a href="{% url 'vista_contacto' %}"> Contacto </a></li>
+            <li> <a href="{% url 'vista_productos' %}"> productos </a></li>
+        </ul>   
+-->
+        
+    </nav>    
 
     <div class="container">
         {% block contenido %}
