--- a/templetes/productos.html
+++ b/templetes/productos.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
     {% block contenido %}
         <h1>Lista productos</h1>
-
+        <a href="{% url 'vista_agregar_productos' %}" class="btn btn-primary">Agregar Producto</a>
         <table class="table">
             <thead>
               <tr>
