creacion de api

--- a/templetes/agregarProducto.html
+++ b/templetes/agregarProducto.html
@@ -4,6 +4,6 @@
         <form action="" method="POST" enctype="multipart/form-data">
             {% csrf_token%}
             {{ formulario.as_p }}
-            <input type="submit" value="agregar Producto">
+            <input type="submit" value="Guardar Producto">
         </form>
     {%  endblock contenido%}
