--- a/templetes/base.html
+++ b/templetes/base.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% load static %}
-    <link rel="stylesheet" href="{% static '/tienda/static/css/bootstrap.min.css' %}" alt="">
+    <link rel="stylesheet" href="{% static '../static/css/bootstrap.min.css' %}" alt="">
 
 </head>
 <body>
