--- a/templetes/productos.html
+++ b/templetes/productos.html
@@ -11,8 +11,9 @@
                 <th scope="col">Status</th>
                 <th scope="col">precio</th>
                 <th scope="col">Stock</th>
-                <th scope="col">idCategorias</th>
+                <!--<th scope="col">idCategorias</th>-->
                 <th scope="col">Marca</th>
+                <th scope="col">Acciones</th>
             </tr>
             </thead>
             <tbody>
@@ -24,8 +25,13 @@
                         <td>{{ p.status }}</td>
                         <td>{{ p.precio }}</td>
                         <td>{{ p.stok }}</td>
-                        <td>{{ p.id.Categorias }}</td>
+                       <!-- <td>{{ p.id.Categorias }}</td>-->
                         <td>{{ p.marca }}</td>
+                        <td>
+                            <a href="{% url 'vista_ver_producto' id_prod=p.id %}" class="btn btn-info">Ver</a>        
+                            <a href="{% url 'vista_eliminar_producto' id_prod=p.id %}" class="btn btn-danger">Eliminar</a>        
+                            <a href="{% url 'vista_editar_producto' id_prod=p.id %}" class="btn btn-warning">Editar</a>        
+                        </td>
                     </tr>
                 {% endfor %} 
             </tbody>
